cmake_minimum_required(VERSION 3.24...3.30)
project(proj LANGUAGES CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    message(STATUS "Sanitizer is enabled")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -O0 -g -fsanitize=address")
    add_subdirectory(proj)
    add_subdirectory(security)
    add_subdirectory(tests)
    add_subdirectory(benchmarks)
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -O3")
    add_subdirectory(proj)
    add_subdirectory(tests)
    add_subdirectory(benchmarks)
endif()
